# wallpaper-fixer

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  gen_bat.py  pyproject.toml  requirements.txt  run.bat
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml  test.yml
lib/: fixes.py  parser.py  system_info.py
static/: app.js  index.html  sample_info.txt  style.css
tests/: test_fixes.py  test_parser.py  test_security.py  test_system.py
